GNU mailutils NEWS -- history of user-visible changes. 2021-07-19
See the end of file for copying conditions.

Please send mailutils bug reports to <bug-mailutils@gnu.org>.

Version 3.12.90 (git)

* Improved mailbox locking

This fixes several bugs.

* Changes in the 'locking' configuration statement.

New statement 'type' configures the type of locking to use.  Possible
values are: 'default', 'dotlock', 'external', 'kernel', and 'null'.

New statement 'pid-check' instructs mailutils to check if the PID of
the process owning the lock still exists in the process table.  If it
doesn't the lock is considered stale and is removed.

The 'flags' statement is deprecated.  If used, an error message is
issued along with a suggestion on what statement to use instead:

   Flag     Statement to use
  --------+-------------------
    E       type external     
    R       retry-count N
    T       expire-timeout N
    P       pid-check true

The 'retry-timeout' statement is a misnomer and is therefore
deprecated.  Use 'retry-sleep' instead.

* mail utility

** Fix semantics of mail sending and saving commands

** Fix the -F option

** Improve POSIX mailx compatible mode

** Compose escapes are recognized only in interactive mode

This fixes https://savannah.gnu.org/bugs/?60937

** New mail variables

  - fullnames
      Controls whether personal parts of emails are preserved in
      recipient addresses when replying.  Default is true.
  - outfilename
      Defines the algorithm to convert the recipient email to the
      name of the file used to record outgoing messages to that
      recipient.  This affects the following commands: Copy,
      Save, Mail, followup, and Followup.  This is a string variable,
      that can take one of the following values:
        "local"  - Local part of the email address is taken as the
	           file name.  This is the default.
	"email"  - Entire email is takes as the file name.